added a banner section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 </nav>
               </div>
         </section>
+
+
+        <section class="banner-container container">
+                <div class="banner-text">
+                    <h1>Explore Your Travel</h1>
+                    <p>Explore the world with the minimum budget of yours. We are guranteeing the best service with the lowest expense possible.</p>
+                </div>
+
+        </section>
      
     </header>
   </body>
