--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
                     <p>Explore the world with the minimum budget of yours. We are guranteeing the best service with the lowest expense possible.</p>
                 </div>
 
+                <div class="banner-form">
+                    <form>
+                        <input type="text" placeholder="Where go">
+                        <select name="" id="">
+                            <option value="when">When</option>
+                            <option value="winter">Winter</option>
+                            <option value="summer">Summer</option>
+                            <option value="fall">Fall</option>
+
+                        </select>
+                        <select name="" id="">
+                            <option value="select">Select Type</option>
+                            <option value="normal">Ease</option>
+                            <option value="medium">Comfort</option>
+                            <option value="expensive">Extra care</option>
+                        </select>
+                    </form>
+                </div>
+
         </section>
      
     </header>
