completed the form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Adventure Travel</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -54,6 +54,7 @@
                             <option value="medium">Comfort</option>
                             <option value="expensive">Extra care</option>
                         </select>
+                        <button class="find">Find Now</button>
                     </form>
                 </div>
 
