popular section responsive done

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
           </div>
         </div>
       </section>
+
+      <section class="destination">
+        
+      </section>
     </main>
   </body>
 </html>
