destination section added

--- a/index.html
+++ b/index.html
@@ -105,8 +105,36 @@
         </div>
       </section>
 
-      <section class="destination">
-        
+      <section class="destination container">
+
+        <div class="destination-text">
+          <h2>Choose Your Destination</h2>
+          <p>We are offering you the best places to visit on earth. Don't lose your chances! Make your life worth it.</p>
+        </div>
+
+        <div class="destination-container">
+          <div class="destination-1">
+            <img src="./Images/Rectangle 5.png" alt="">
+          </div>
+          <div class="destination-2">
+            <img src="./Images/Rectangle 8.png" alt="">
+          </div>
+          <div class="destination-3">
+            <img src="./Images/Rectangle 6.png" alt="">
+          </div>
+          <div class="destination-4">
+            <img src="./Images/Rectangle 7.png" alt="">
+          </div>
+          <div class="destination-5">
+            <img src="./Images/Rectangle 9.png" alt="">
+          </div>
+          <div class="destination-6">
+            <img src="./Images/Rectangle 11.png" alt="">
+          </div>
+          <div class="destination-7">
+            <img src="./Images/Rectangle 10.png" alt="">
+          </div>
+        </div>
       </section>
     </main>
   </body>
