created and made responsive choose section

--- a/index.html
+++ b/index.html
@@ -82,19 +82,17 @@
               to travel with our care.
             </p>
             <p>
-              <i class="fa-solid fa-circle"></i> First of
-              all, we provide you all the safety equipment so that you can
-              travel with ensurance that you're not bothered about anything.
+              <i class="fa-solid fa-circle"></i> First of all, we provide you
+              all the safety equipment so that you can travel with ensurance
+              that you're not bothered about anything.
             </p>
             <p>
-              <i class="fa-solid fa-circle"></i> Our team
-              will manage your needs as according to the situation, so don't be
-              worry to ask.
+              <i class="fa-solid fa-circle"></i> Our team will manage your needs
+              as according to the situation, so don't be worry to ask.
             </p>
             <p>
-              <i class="fa-solid fa-circle"></i> Tha'ts
-              why adventure lover choose us as their best option. Alps or
-              anywhere we are with you.
+              <i class="fa-solid fa-circle"></i> Tha'ts why adventure lover
+              choose us as their best option. Alps or anywhere we are with you.
             </p>
 
             <button class="read">Read More</button>
@@ -106,33 +104,68 @@
       </section>
 
       <section class="destination container">
-
         <div class="destination-text">
           <h2>Choose Your Destination</h2>
-          <p>We are offering you the best places to visit on earth. Don't lose your chances! Make your life worth it.</p>
+          <p>
+            We are offering you the best places to visit on earth. Don't lose
+            your chances! Make your life worth it.
+          </p>
         </div>
 
         <div class="destination-container">
           <div class="destination-1">
-            <img src="./Images/Rectangle 5.png" alt="">
+            <img src="./Images/Rectangle 5.png" alt="" />
           </div>
           <div class="destination-2">
-            <img src="./Images/Rectangle 8.png" alt="">
+            <img src="./Images/Rectangle 8.png" alt="" />
           </div>
           <div class="destination-3">
-            <img src="./Images/Rectangle 6.png" alt="">
+            <img src="./Images/Rectangle 6.png" alt="" />
           </div>
           <div class="destination-4">
-            <img src="./Images/Rectangle 7.png" alt="">
+            <img src="./Images/Rectangle 7.png" alt="" />
           </div>
           <div class="destination-5">
-            <img src="./Images/Rectangle 9.png" alt="">
+            <img src="./Images/Rectangle 9.png" alt="" />
           </div>
           <div class="destination-6">
-            <img src="./Images/Rectangle 11.png" alt="">
+            <img src="./Images/Rectangle 11.png" alt="" />
           </div>
           <div class="destination-7">
-            <img src="./Images/Rectangle 10.png" alt="">
+            <img src="./Images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="choose container">
+        <h2>Why Choose Us</h2>
+        <p class="choose-text">
+          We provide the best service in terms of traelling. Below we have
+          described it in details. Let's read!
+        </p>
+        <div class="choose-upper">
+          <div class="choose-card left-card">
+            <img src="./Images/hotel 1.png" alt="hotle" />
+            <h4>Handpicked Hotels</h4>
+            <p>
+              We will arrange for you the hotels you need to stay. It will be
+              decided according to your taste.
+            </p>
+          </div>
+          <div class="choose-card right-card">
+            <img src="./Images/map 1.png" alt="" />
+            <h4>World Class Service</h4>
+            <p>
+              You'll get all the helps to find the most exciting places to
+              visit.
+            </p>
+          </div>
+        </div>
+        <div class="choose-lower">
+          <div class="choose-card lower-card">
+            <img src="./Images/price-tag 1.png" alt="" />
+            <h4>Best Price Guarantee</h4>
+            <p>You won't need to be super rich to get all these experiences.</p>
           </div>
         </div>
       </section>
