added newsletter section

--- a/index.html
+++ b/index.html
@@ -169,6 +169,25 @@
           </div>
         </div>
       </section>
+
+      <section class="newsletter container">
+        <div class="newsletter-container">
+          <div class="newsletter-form">
+            <h4>Newsletter</h4>
+            <p>Get your daily dose of travel news & tips. Sign up today!</p>
+            <img src="./Images/Line 1.png" alt="">
+
+            <input type="text" placeholder="Enter your name">
+            <input type="email" name="" id="" placeholder="Enter your email">
+            <button class="read">Subscribe</button>
+          </div>
+          <div class="newsletter-image">
+            <img src="./Images/Group 40069.png" alt="">
+          </div>
+        </div>
+        
+
+      </section>
     </main>
   </body>
 </html>
