added and made responsive place section

--- a/index.html
+++ b/index.html
@@ -170,24 +170,66 @@
         </div>
       </section>
 
+      <section class="place-container container">
+        <div class="place-text">
+          <h4>A Simple Perfect Place To Get Lost</h4>
+          <p class="place-pp">A place in Bangladesh can amaze you like nothing else will.</p>
+          <p class="place-p">
+            <i class="fa-solid fa-circle"></i> Mountains are calling, so don't be late to join the caravan.
+          </p>
+          <p class="place-p">
+            <i class="fa-solid fa-circle"></i> Our team will be with you and will fulfill your needs so don't hesitate. There is a world to discover!
+          </p>
+
+
+
+        </div>
+
+        <div class="place-image">
+          <img src="./Images/Group 40089.png" alt="">
+        </div>
+      </section>
+
       <section class="newsletter container">
         <div class="newsletter-container">
           <div class="newsletter-form">
             <h4>Newsletter</h4>
             <p>Get your daily dose of travel news & tips. Sign up today!</p>
-            <img src="./Images/Line 1.png" alt="">
+            <img src="./Images/Line 1.png" alt="" />
 
-            <input type="text" placeholder="Enter your name">
-            <input type="email" name="" id="" placeholder="Enter your email">
+            <input type="text" placeholder="Enter your name" />
+            <input type="email" name="" id="" placeholder="Enter your email" />
             <button class="read">Subscribe</button>
           </div>
           <div class="newsletter-image">
-            <img src="./Images/Group 40069.png" alt="">
+            <img src="./Images/Group 40069.png" alt="" />
           </div>
         </div>
-        
-
       </section>
     </main>
+
+    <footer>
+       <div class="footer-container">
+        <div class="nav-title">
+          <div class="nav-title-image">
+            <img src="./Images/Group 40071 (2).png" alt="" />
+          </div>
+          <div class="nav-title-text">
+            <h3>Adventure <span class="special">Travel</span></h3>
+          </div>
+           
+        </div>
+        <p>Adventure travel offers the best of your dreams to live while earth is still there and birds are flying to another continent.</p>
+        <div class="social-icon">
+          <a href=""><i class="fa-brands fa-facebook" style="color: #000000;"></i></a>
+          <a href=""><i class="fa-brands fa-instagram" style="color: #000000;"></i></a>
+          <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #000205;"></i></a>
+          <a href=""><i class="fa-brands fa-github" style="color: #000000;"></i></a>
+        </div>
+        <img src="./Images/Line 2.png" alt="" class="line">
+        <p>2024, All rights reserved.</p>         
+       </div>
+        </div>
+    </footer>
   </body>
 </html>
