--- a/index.html
+++ b/index.html
@@ -170,6 +170,51 @@
         </div>
       </section>
 
+
+      <section class="deal-section">
+        <h2>Deals & Discounts</h2>
+        <p>Here we present to you the offers so that you can have an excellent trip with the minimum expenses.</p>
+        <div class="deal-container-1 container">
+          <div class="deal">
+            <div class="deal-image">
+              <img src="./Images/Group 32.png" alt="">
+              <img src="./Images/Group 33.png" alt="">
+              <img src="./Images/Group 34.png" alt="">
+            </div>
+            <h5>Tour To Satorini</h5>
+            <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
+            <p>Price: $1300-$1500 </p>
+            <button>Book Now</button>
+          </div>
+        </div>
+        <div class="deal-container-2 container">
+          <div class="deal">
+            <div class="deal-image">
+              <img src="./Images/Group 32.png" alt="">
+              <img src="./Images/Group 33.png" alt="">
+              <img src="./Images/Group 34.png" alt="">
+            </div>
+            <h5>Tour To Satorini</h5>
+            <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
+            <p>Price: $1300-$1500 </p>
+            <button>Book Now</button>
+          </div>
+        </div>
+        <div class="deal-container-3 container">
+          <div class="deal">
+            <div class="deal-image">
+              <img src="./Images/Group 32.png" alt="">
+              <img src="./Images/Group 33.png" alt="">
+              <img src="./Images/Group 34.png" alt="">
+            </div>
+            <h5>Tour To Satorini</h5>
+            <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
+            <p>Price: $1300-$1500 </p>
+            <button>Book Now</button>
+          </div>
+        </div>
+      </section>
+
       <section class="place-container container">
         <div class="place-text">
           <h4>A Simple Perfect Place To Get Lost</h4>
