made the deal section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
       <section class="deal-section">
         <h2>Deals & Discounts</h2>
-        <p>Here we present to you the offers so that you can have an excellent trip with the minimum expenses.</p>
+        <p class="deal-p">Here we present to you the offers so that you can have an excellent trip with the minimum expenses.</p>
         <div class="deal-container-1 container">
           <div class="deal">
             <div class="deal-image">
@@ -183,8 +183,8 @@
             </div>
             <h5>Tour To Satorini</h5>
             <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
-            <p>Price: $1300-$1500 </p>
-            <button>Book Now</button>
+            <p class="deal-price">Price: $1300-$1500 </p>
+            <button class="read">Book Now</button>
           </div>
         </div>
         <div class="deal-container-2 container">
@@ -196,8 +196,8 @@
             </div>
             <h5>Tour To Satorini</h5>
             <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
-            <p>Price: $1300-$1500 </p>
-            <button>Book Now</button>
+            <p class="deal-price">Price: $1300-$1500 </p>
+            <button class="read">Book Now</button>
           </div>
         </div>
         <div class="deal-container-3 container">
@@ -209,15 +209,15 @@
             </div>
             <h5>Tour To Satorini</h5>
             <p>This is the minimum you have to bear to be able to get a wonderful trip like this</p>
-            <p>Price: $1300-$1500 </p>
-            <button>Book Now</button>
+            <p class="deal-price">Price: $1300-$1500 </p>
+            <button class="read">Book Now</button>
           </div>
         </div>
       </section>
 
       <section class="place-container container">
         <div class="place-text">
-          <h4>A Simple Perfect Place To Get Lost</h4>
+          <h2>A Simple Perfect Place To Get Lost</h2>
           <p class="place-pp">A place in Bangladesh can amaze you like nothing else will.</p>
           <p class="place-p">
             <i class="fa-solid fa-circle"></i> Mountains are calling, so don't be late to join the caravan.
