--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
 
         <div class="place-image">
-          <img src="./Images/Group 40089.png" alt="">
+          <iframe width="400" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=ER7MvFNaTzkSwpjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" style="border-radius: 16px;" allowfullscreen></iframe>
         </div>
       </section>
 
