about section added

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
           <p class="place-p">
             <i class="fa-solid fa-circle"></i> Our team will be with you and will fulfill your needs so don't hesitate. There is a world to discover!
           </p>
+          <button class="read">See More</button>
 
 
 
@@ -232,6 +233,21 @@
 
         <div class="place-image">
           <iframe class="iframe" width="500" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=ER7MvFNaTzkSwpjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" style="border-radius: 16px;" allowfullscreen></iframe>
+        </div>
+      </section>
+
+
+      <section class="about">
+        <div class="about-container container">
+          <div class="about-text">
+            <h2>Who Are We</h2>
+            <p>Adventure Travel is  the place where you can find excellent trip planning with the minimum cost imagine. We offer you multiple trip plannings, hotel and transport service - to make your travel the most comfortable possible. Our team will care about you like our own familly members. Established in 2008, we are hoping to be more and more responsible in future. </p>
+
+            <p>So don't be late to join with our team on your adventure, your trip of the world. The world is calling and we are here to arrange for you everything.</p>
+          </div>
+          <div class="about-image">
+            <img src="./Images/team.jpg" alt="">
+          </div>
         </div>
       </section>
 
