made the nav bar responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
 
         <div class="nav-main">
+          <input type="checkbox" name="" id="checkbox">
           <nav>
             <ul>
               <li><a href="">Home</a></li>
@@ -35,6 +36,11 @@
               <li><a href="">Contact</a></li>
             </ul>
           </nav>
+          <label for="checkbox">
+
+        
+          <i class="fa fa-bars menu-icon"></i>
+        </label>
         </div>
       </section>
 
